# webassembly-ziper

./: Cargo.toml  README.md  package-lock.json  package.json
demo/: index.html  webassembly_ziper.js  webassembly_ziper_bg.wasm
src/: lib.rs
