[package]
name = "webassembly-ziper"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly implementation of JSZip with compatible API"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
js-sys = "=0.3.91"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
zip = { version = "2.2", default-features = false, features = ["deflate", "chrono"] }
flate2 = "1.0"
chrono = "0.4"
web-sys = { version = "=0.3.91", features = [
    "console",
    "Blob",
    "BlobPropertyBag",
    "FileReader",
] }
thiserror = "1.0"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
