[package]
name = "webassembly-ziper"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly implementation of JSZip with compatible API"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
js-sys = "=0.3.91"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
web-sys = { version = "=0.3.91", features = [
    "console",
    "Blob",
    "BlobPropertyBag",
    "FileReader",
] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
